corrected sidebar h4 white-space:nowrap and width; auto

--- a/ft_transcendence/static/home.css
+++ b/ft_transcendence/static/home.css
@@ -67,6 +67,8 @@ aside:hover .sidebar-links {
     margin: 15px 0 5px;
     font-size: 1.2em;
     opacity: 0;
+    width: auto;
+    white-space: nowrap;
 }
 aside:hover .sidebar-links h4 {
     transition: all 0.4s ease;
